- Backend Spring Boot con API REST complete - Frontend React con dashboard interattiva - Database H2 con dati di test - Documentazione completa (README, API docs, architettura) - Sistema autenticazione e gestione prestiti - Simulatore prestiti con calcoli finanziari - Piano di ammortamento e sistema pagamenti"